fixed padding for nav links in mobile dropdown - more repsonsive and text not going off screen

--- a/src/styles/shared/mobilenav.scss
+++ b/src/styles/shared/mobilenav.scss
@@ -14,7 +14,7 @@
     display: block;
     font-family: $heading-font;
     font-size: 200%;
-    padding: 8%;
+    padding: 1em;
     text-decoration: none;
     font-weight: 700;
     text-align: center;
